--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -4,7 +4,9 @@
 
 .App {
   text-align: center;
-  font:"'Murecho', sans-serif"
+  font:"'Murecho', sans-serif";
+  width:80%;
+  float: right;
   
 }
 
